--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-  <div id="main">
+  <main>
     <div id="qrcode-img">
       <img src="images/image-qr-code.png" alt="qr code image" height="330">
     </div>
@@ -16,6 +16,6 @@
       <p id="title">Improve your front-end <br> skills by building projects</p>
       <p id="paragrath">Scan the QR code to visit Frontend <br>Mentor and take your coding skill to <br> the next level</p>
     </div>
-  </div>
+  </main>
 </body>
 </html>
